syntax = "proto3";

package settings.profile.totp.request;

message Request {
  uint32 digit1 = 1;
  uint32 digit2 = 2;
  uint32 digit3 = 3;
  uint32 digit4 = 4;
  uint32 digit5 = 5;
  uint32 digit6 = 6;
}

